--- a/Game-Estourando-Baloes/index.html
+++ b/Game-Estourando-Baloes/index.html
@@ -2,15 +2,32 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-
+		<meta name="Author" content="João Mateus">
 		<title>Estourando balões</title>
 
 		<script language='Javascript'>
-			
+			function iniciarJogo(){
+				var nivel_jogo = document.getElementById('nivel_jogo').value;
+				
+				window.location.href = 'jogo.html?'+nivel_jogo;
+			}
 		</script>
+
 	</head>
 
 	<body>
+		<div>
+			<p>
+				<b>Nível:</b>
+				<select id="nivel_jogo">
+					<option value="1">Facíl</option>
+					<option value="2">Normal</option>
+					<option value="3">Difícil</option>
+				</select>
+			</p>
+			<br />
+			<img src="imagens/iniciar.png" onclick="iniciarJogo()" />
+		</div>
 
 	</body>
 	
