--- a/Game-Estourando-Baloes/jogo.html
+++ b/Game-Estourando-Baloes/jogo.html
@@ -5,9 +5,49 @@
 
 		<title>Estourando balões</title>
 
+		<script src="jogo.js"></script>
 	</head>
 
 	<body>
+		<div style="float:left; width:auto; height:500px;background: #FFF; border: solid 1px #A2A2A2">
+			
+			<table border="1">
+				<tr>
+					<td>
+						<img src="imagens/balao_azul_grande.png">
+					</td>
+					<td>
+						10
+					</td>
+				</tr>
+			</table>
+			<br />
+
+			<table border="1">
+				<tr>
+					<td>
+						<img src="imagens/balao_azul_grande_estourado.png">
+					</td>
+					<td>
+						10
+					</td>
+				</tr>
+			</table>
+			<br />
+
+			<table border="1" style="width:140px; height:132px;">
+				<tr>
+					<td style="background: url('imagens/cronometro.png')">
+						
+					</td>
+				</tr>
+			</table>
+
+		</div>
+
+		<div style="float:left; width:600px; height:500px; background: url('imagens/cenario.png'); background-position:bottom;">
+			
+		</div>
 
 	</body>
 	
